Update CSS and fix overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
 body {
   font-family: "Inter-Regular", sans-serif;
   overflow-x: hidden;
+  position: relative;
 }
 
 @font-face {
